--- a/examples/vanilla-app/index.html
+++ b/examples/vanilla-app/index.html
@@ -12,6 +12,7 @@
         <div class="counter"></div>
         <div class="inc">+</div>
         <div class="dec">-</div>
+        <div class="sub">subscribe</div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
