dev branch commit

--- a/examples/vanilla-app/index.html
+++ b/examples/vanilla-app/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <div id="app">
-      <div>
-        <div class="counter"></div>
-        <div class="inc">+</div>
-        <div class="dec">-</div>
-        <div class="sub">subscribe</div>
+      <div class="scroller">
+        <div class="scroller-content">
+          <section class="scroller-section s1">SLIDE 1</section>
+          <section class="scroller-section s2">SLIDE 2</section>
+          <section class="scroller-section s3">SLIDE 3</section>
+          <section class="scroller-section s4">SLIDE 4</section>
+        </div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
