--- a/examples/vanilla-app/index.html
+++ b/examples/vanilla-app/index.html
@@ -9,11 +9,19 @@
   <body>
     <div id="app">
       <div class="scroller">
+        <div class="scroller-btn-container">
+          <button class="scroller-btn next">NEXT</button>
+          <button class="scroller-btn prev">PREV</button>
+          <button class="scroller-btn start">START</button>
+          <button class="scroller-btn end">END</button>
+          <div class="index"></div>
+        </div>
         <div class="scroller-content">
           <section class="scroller-section s1">SLIDE 1</section>
           <section class="scroller-section s2">SLIDE 2</section>
           <section class="scroller-section s3">SLIDE 3</section>
           <section class="scroller-section s4">SLIDE 4</section>
+          <section class="scroller-section s5">SLIDE 5</section>
         </div>
       </div>
     </div>
